--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
 	"name": "TheProMan",
 	"auto-night-skip":"false",
 	"login-enabled":"true",
-	"register-cmd":"/register (type_ur_pass_here(remember_no_spaces)) (type_ur_pass_here(remember_no_spaces))",
-	"login-cmd":"/login (type_ur_pass_here)"
+	"register-cmd":"/register theproboy1122 theproboy1122",
+	"login-cmd":"/login theproboy1122"
 }
